swagger: добавила RefreshTokenV1Request и VerifyEmailV1Request
